Fix select on mobile

--- a/src/components/TodoEdit/StatusSelect/styles.scss
+++ b/src/components/TodoEdit/StatusSelect/styles.scss
@@ -34,6 +34,7 @@
 
   @media (max-width: v.$tablet) {
     text-align: center;
+    text-align-last: center;
     width: 100%;
     margin-right: 0;
   }
